<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cvSerie"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:clipChildren="true"
        android:clipToPadding="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_placeholder"
            android:clipChildren="true"
            android:clipToPadding="true">

            <!-- this image must be higher than the cell, to enable parallax ! -->

            <ImageView
                android:id="@+id/ivImageBackground"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:alpha=".6"
                android:scaleType="centerCrop"/>



        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dip"
            android:background="@drawable/top_shadow"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="195dip"
            android:background="@drawable/gradient_black_85" />

        <View
            android:id="@+id/vBlanck"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_gravity="bottom"
            android:background="@android:color/white" />


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:background="@android:color/white"
            android:padding="2dp"
            android:elevation="4dp">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="95dip"
                android:layout_height="140dip"

                android:scaleType="centerCrop"/>
        </FrameLayout>


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/serie_language"
                android:textSize="@dimen/sizeMiddleText"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvLanguages"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_margin="10sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/serie_information"
                android:textSize="@dimen/sizeMiddleText"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSeason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serie_season"/>

                <TextView
                    android:id="@+id/tvEpisode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50sp"
                    android:text="@string/serie_episode"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvComplete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serie_complete"/>

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50sp"
                    android:text="@string/serie_status"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/button_gamemode"
            android:textSize="@dimen/sizeMiddleText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10sp"
            android:gravity="center">

            <Button
                android:id="@+id/btTimeAttack"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_marginRight="5sp"
                android:layout_marginLeft="5sp"
                android:text="@string/button_timeattack"/>

            <Button
                android:id="@+id/btSeason"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_marginRight="5sp"
                android:layout_marginLeft="5sp"
                android:text="@string/button_season"/>

            <Button
                android:id="@+id/btFree"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_marginRight="5sp"
                android:layout_marginLeft="5sp"
                android:text="@string/button_free"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>